remove testing in parallel

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
         apt-get update -qq
         apt-get install -q -y tzdata libssl-dev zlib1g-dev
     - name: Test
-      run: swift test --parallel --enable-code-coverage --enable-test-discovery
+      run: swift test --enable-code-coverage --enable-test-discovery
     - name: Convert coverage files
       run: llvm-cov export -format="lcov" .build/debug/AWSSDKSwiftCorePackageTests.xctest -instr-profile .build/debug/codecov/default.profdata > info.lcov
     - name: Upload to codecov.io
